--- a/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/1.0_load_and_display_data.ipynb
+++ b/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/1.0_load_and_display_data.ipynb
@@ -34,19 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
+    "* Download data\n",
+    "* Imports and Auxiliary Functions\n",
+    "* Examine Files\n",
+    "* Question 1\n",
+    "* Display and Analyze Image With No Cracks\n",
+    "* Question 2\n",
     "\n",
-    "<ul>\n",
-    "    <li><a href=\"#download_data\"> Download data</a></li>\n",
-    "    <li><a href=\"#auxiliary\"> Imports and Auxiliary Functions </a></li>\n",
-    "    <li><a href=\"#examine_files\">Examine Files</a></li>\n",
-    "    <li><a href=\"#Question_1\">Question 1 </a></li>\n",
-    "    <li><a href=\"#Display\">Display and Analyze Image With No Cracks    </a></li>\n",
-    "    <li><a href=\"#Question_2\">Question 2 </a></li>\n",
-    "</ul>\n",
-    "<p>Estimated Time Needed: <strong>25 min</strong></p>\n",
-    " </div>\n",
-    "<hr>\n"
+    "Estimated Time Needed: **25 min**"
    ]
   },
   {
@@ -628,9 +623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -642,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
