--- a/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/2.1_data_loader_PyTorch.ipynb
+++ b/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/2.1_data_loader_PyTorch.ipynb
@@ -48,25 +48,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
+    "* Download data\n",
+    "* Imports and Auxiliary Functions\n",
+    "* Examine Files\n",
+    "* Question 1:find number of files\n",
+    "* Assign Labels to Images\n",
+    "* Question 2 : Assign labels to image\n",
+    "* Training  and Validation  Split\n",
+    "* Question 3: Training  and Validation  Split\n",
+    "* Create a Dataset Class\n",
+    "* Question 4:Display  training dataset object\n",
+    "* Question 5:Display  validation dataset  object\n",
     "\n",
-    "<ul>\n",
-    "    <li><a href=\"#download_data\"> Download data</a></li>\n",
-    "    <li><a href=\"#auxiliary\"> Imports and Auxiliary Functions </a></li>\n",
-    "    <li><a href=\"#examine_files\">Examine Files</a></li> \n",
-    "    <li><a href=\"#Question_1\"><b>Question 1:find number of files</b> </a></li>\n",
-    "    <li><a href=\"#assign_labels\">Assign Labels to Images  </a></li>\n",
-    "    <li><a href=\"#Question_2\"><b>Question 2 : Assign labels to image </b> </a></li>\n",
-    "    <li><a href=\"#split\">Training  and Validation  Split </a></li>\n",
-    "    <li><a href=\"#Question_3\"><b>Question 3: Training  and Validation  Split</b> </a></li>\n",
-    "<li><a href=\"#data_class\">Create a Dataset Class </a></li>\n",
-    "    <li><a href=\"#Question_4\"><b>Question 4:Display  training dataset object</b> </a></li>\n",
-    "    <li><a href=\"#Question_5\"><b>Question 5:Display  validation dataset  object</b> </a></li>\n",
-    "\n",
-    "</ul>\n",
-    "<p>Estimated Time Needed: <strong>25 min</strong></p>\n",
-    " </div>\n",
-    "<hr>\n"
+    "Estimated Time Needed: **25 min**"
    ]
   },
   {
@@ -773,9 +767,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -787,7 +781,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
