--- a/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/3.1_linearclassiferPytorch.ipynb
+++ b/IBM AI Engineering Professional Certificate/AI Capstone Project with Deep Learning/3.1_linearclassiferPytorch.ipynb
@@ -50,18 +50,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
+    "* Download data\n",
+    "* Imports and Auxiliary Functions\n",
+    "* Dataset Class\n",
+    "* Transform Object and Dataset Object\n",
+    "* Question\n",
     "\n",
-    "<ul>\n",
-    "    <li><a href=\"#download_data\"> Download data</a></li>\n",
-    "    <li><a href=\"#auxiliary\"> Imports and Auxiliary Functions </a></li>\n",
-    "    <li><a href=\"#data_class\"> Dataset Class</a></li>\n",
-    "    <li><a href=\"#trasform_Data_object\">Transform Object and Dataset Object</a></li>\n",
-    "    <li><a href=\"#Question\">Question</a></li>\n",
-    "</ul>\n",
-    "<p>Estimated Time Needed: <strong>25 min</strong></p>\n",
-    " </div>\n",
-    "<hr>\n"
+    "\n",
+    "Estimated Time Needed: **25 min**"
    ]
   },
   {
